feat: add search to paginated endpoints
